<?xml version="1.0"?>
<package format="2">

  <name>cam_pkg</name>
  <version>0.0.1</version>
  <description>Petrobras challenge code from UFPB team</description>

  <maintainer email="lucasnnobrega@gmail.com.br">Lucas Nobrega</maintainer>
  <author email="lucasnnobrega@gmail.com.br">Lucas Nobrega</author>
  
  <maintainer email="wagnergarcia@cc.ci.ufpb.br">wagner</maintainer>
  <maintainer email="jorge.luiz.henri@hotmail.com">wagner</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>

  <export>
    <!-- The plugins.xml file defines nodelet as a plugin -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>

  </export>

</package>
